faces/ingress/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    SecretName: tls-secret
    IngressclassName: alb
  rules:
  - http:
      paths:
      - path: /happy/
        pathType: Prefix
        backend:
          service:
            name: happy-service
            port:
              number: 8081
      - path: /sad/
        pathType: Prefix
        backend:
          service:
            name: sad-service
            port:
              number: 8082
      - path: /angry/
        pathType: Prefix
        backend:
          service:
            name: angry-service
            port:
              number: 8083
